# SoilSnap-Model_V2

./: .gitignore  app.py  pyproject.toml  requirements.txt
